--- a/web_static/styles/4-common.css
+++ b/web_static/styles/4-common.css
@@ -21,8 +21,7 @@ main {
 
 div.container {
 	max-width: 1000px;
-	margin-top: 30px;
-	margin-bottom: 30px;
+	margin: 30px auto;
 	display: flex;
 	flex-direction: column;
 	align-items: stretch;
